# quantopian_lectures

./: .gitignore  README.md  pyproject.toml
quantopian_lectures/: 10QLS_Instability-of-Estimates.ipynb  11QLS_Random-Variables.ipynb  12QLS_Linear-Regression.ipynb  13QLS_Maximum-Likelihood-Estimation.ipynb  14QLS_Regression-Model-Instability.ipynb  15QLS_Multiple-Linear-Regression.ipynb  16QLS_Violations-of-Regression-Models.ipynb  17QLS_Model-Misspecification.ipynb  18QLS_Residual-Analysis.ipynb  19QLS_Dangers-of-Overfitting.ipynb  20QLS_Hypothesis-Testing.ipynb  21QLS_Confidence-Intervals.ipynb  22QLS_pHacking-and-Multiple-Comparisons-Bias.ipynb  5QLS_Plotting-Data.ipynb  6QLS_Means.ipynb  7QLS_Variance.ipynb  8QLS_Statistical-Moments.ipynb  9QLS_Linear-Correlation-Analysis.ipynb
quantopian_lectures/.ipynb_checkpoints/: 12QLS_Linear-Regression-checkpoint.ipynb  15QLS_Multiple-Linear-Regression-checkpoint.ipynb  18QLS_Residual-Analysis-checkpoint.ipynb  19QLS_Dangers-of-Overfitting-checkpoint.ipynb  20QLS_Hypothesis-Testing-checkpoint.ipynb  21QLS_Confidence-Intervals-checkpoint.ipynb  7QLS_Variance-checkpoint.ipynb
