[tool.poetry]
name = "quantopian-lectures"
version = "1.0"
description = "venatio's copy of the Quantopian lecture series"
authors = ["venatio <72844565+v3natio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.26"
statsmodels = "^0.14.0"
notebook = "^7.0.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
